@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/epspdf/epspdf-0.5.3.ebuild,v 1.2 2012/03/30 15:44:11 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/epspdf/epspdf-0.5.3.ebuild,v 1.3 2012/04/03 21:25:33 jer Exp $
 
 EAPI=4
 
@@ -12,7 +12,7 @@ SRC_URI="http://tex.aanhet.net/epspdf/${PN}.${PV}.tgz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~x86-fbsd"
+KEYWORDS="~amd64 ~hppa ~x86-fbsd"
 IUSE="doc tk"
 
 DEPEND="sys-apps/texinfo"
