@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/texlive/texlive-2011-r1.ebuild,v 1.2 2012/03/30 14:50:43 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/texlive/texlive-2011-r1.ebuild,v 1.3 2012/04/03 21:26:56 jer Exp $
 
 EAPI="2"
 
@@ -10,7 +10,7 @@ SRC_URI=""
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~x86-fbsd"
+KEYWORDS="~amd64 ~hppa ~x86-fbsd"
 IUSE="cjk context detex doc dvi2tty dvipdfm extra epspdf games graphics
 humanities jadetex luatex music omega pdfannotextractor png pstricks publishers
 science tex4ht truetype xetex xindy xml X"
