@@ -1,6 +1,9 @@
 # ChangeLog for app-text/epspdf
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/epspdf/ChangeLog,v 1.2 2012/03/30 15:44:11 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/epspdf/ChangeLog,v 1.3 2012/04/03 21:25:33 jer Exp $
+
+  03 Apr 2012; Jeroen Roovers <jer@gentoo.org> epspdf-0.5.3.ebuild:
+  Marked ~hppa (bug #410239).
 
   30 Mar 2012; Alexis Ballier <aballier@gentoo.org> epspdf-0.5.3.ebuild:
   keyword ~x86-fbsd
